styles.css
*{
    margin: 0;
    padding: 0;
}

body{
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

a{
    text-decoration: none;
    color: #e5e7eb;
}

ul{
    list-style-type: none;
    display: flex;
    gap: 24px;
}
.section-one{
    background-color: #1f2937;
    padding-left: 175px;
    padding-right: 175px;
    padding-top: 10px;
    padding-bottom: 100px;
}

.header{
    display: flex;
}

.left-header{
    color: #f9faf8;
    display: flex;
    font-size: 24px;
    font-weight: bold;
}

.right-header{
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    padding-left: 1000px ;
    font-size: 18px;
    color: #e5e7eb;
}

.hero-container{
    margin-top: 100px;
    display: flex;

    height: 250px;
    justify-content: space-between;
}

.hero-text{
    display: flex;
    flex-direction: column;
    width: 28%;
}

.hero-text h1{
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}

.hero-text p{
    font-size: 18px;
    color: #e5e7eb;
    font-weight: lighter;
}

.button-one{
    color: white;
    background-color: #3882f6;
    border-radius: 5px;
    width: 100px;
    height: 25px;
    margin-top: 10px;
    border: none;
}

.placeholder{
    background-color: grey;
    display: flex;
    color: white;
    width: 45%;
    text-align: center;
    align-items: center;
    justify-content: center;
}

.section-two{
    padding-left: 175px;
    padding-right: 175px;
    padding-top: 10px;
    height: 600px;
}

.hero-container-two h1{
    text-align: center;
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
    padding: 50px;
}

.box-container{
    display: flex;
    gap: 86px;
    flex-direction: row;
    justify-content: center;
}

.info-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 150px;
    text-align: center;
}

.button-two{
    width: 150px;
    height: 150px;
    border-radius: 10px;
    background: transparent;
    color: #3882f6;
    border-color: #3882f6;
    border-style: solid;
    border-width: 3px;
    
}

.text{
    color: #1f2937;
}

